<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <EditText
            android:id="@+id/editTextCalculus"
            android:layout_width="match_parent"
            android:layout_height="150dp"

            android:autofillHints="@string/edit_text_here_or_by_push_numbers"
            android:background="#673AB7"
            android:ems="10"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/edit_text_here_or_by_push_numbers"
            android:inputType="textPersonName"
            android:labelFor="@id/answerText"
            android:textAlignment="center"
            android:textColor="#F6E9E9"
            android:textColorHint="#F4E7E7"
            android:textSize="24sp" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="48dp">
        <Button
            android:id="@+id/button1"

            android:layout_width="48dp"
            android:layout_height="match_parent"

            android:text="@string/_1"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button2"

            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:text="@string/_2"
            style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/button3"

        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:text="@string/_3"
        android:textAlignment="viewStart"
        android:textColor="#D32F2F"
        android:textColorHint="#FBD3D3"
        style="?android:attr/buttonBarButtonStyle" />

</LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <Button
            android:id="@+id/button4"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:text="@string/_4"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button5"
            
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:text="@string/_5"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button6"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:text="@string/_6"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="48dp">
    <Button
        android:id="@+id/button7"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:text="@string/_7"
        style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button8"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:text="@string/_8"
            style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/button9"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:text="@string/_9"
        style="?android:attr/buttonBarButtonStyle" />
</LinearLayout>
<LinearLayout android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="48dp">
    <Button
        android:id="@+id/dotButton"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:text="@string/DOT"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/button0"
        android:layout_width="48dp"
        android:layout_height="match_parent"
         android:text="@string/_0"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/equalButton"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:text="@string/EQUALS"
        style="?android:attr/buttonBarButtonStyle" />
</LinearLayout><LinearLayout android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="48dp">

    <Button
        android:id="@+id/addButton"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:text="@string/ADD"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/multButton"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:text="@string/MUL"
        style="?android:attr/buttonBarButtonStyle" />
<!--
    <Button
        android:id="@+id/sqrtButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/sqrt"
        app:layout_constraintStart_toEndOf="@id/multButton"
        app:layout_constraintTop_toBottomOf="@id/equalButton" />
-->
    <Button
        android:id="@+id/delButton"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:text="@string/DEL"
        style="?android:attr/buttonBarButtonStyle" />
</LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="48dp">
    <Button
        android:id="@+id/substractButton"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:text="@string/SUB"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/divideButton"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:text="@string/DIV"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/expButton"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:text="@string/EXP"
        style="?android:attr/buttonBarButtonStyle" />

</LinearLayout>


            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="48dp">
                <Button
                    android:id="@+id/AboutButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/about_and_policies"/>

            </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="150dp"
        >
        <TextView
            android:id="@+id/answerText"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="#C65959"
            android:fontFamily="monospace"
            android:shadowColor="#801414"
            android:text="@string/result"
            android:textColor="#FFFFFF"
            android:textFontWeight="30"
            android:textSize="34sp"
            android:typeface="monospace"/>
    </LinearLayout>

</LinearLayout>